# fp-2023-cub-fall

./: CHANGELOG.md  LICENSE  README.md  api_for_weights.hs  hw11.cabal  missing_num.hs  real_time_deque.hs
app/: Main.hs  README.md  RegExpLibrary.hs
hw01/: bankers.hs  hw01.cabal  physicist.hs  pure.hs  rbtree.cpp  real_time.hs  task2_1.hs  task2_2_1.hs  task2_2_2.hs
hw01/app/: Main.hs  PureQueue.hs
hw02/: hw02.cabal
hw02/app/: BankersDeque.hs
hw02/src/: BankersDeque.hs  Dijkstra.hs  Heap.hs  SkewBinomialHeap.hs
hw03/hw01/: hw01.cabal
hw03/hw01/app/: Main.hs  Tree1.hs
hw03/hw01/test/: BankersQueueTest.hs  PhysicistQueueTest.hs  Test.hs  TreeTest1.hs  TreeTest2.hs  TreeTest3.hs
hw03/hw01/test/Test/: BankersQueue.hs  PhysicistQueue.hs  PropertyBasedTests.hs  PureQueue.hs  RealTimeQueue.hs  Tree1.hs  Tree2.hs  Tree3.hs
hw03/hw02/: CHANGELOG.md  hw02.cabal  hw03.cabal
hw03/hw02/app/: Main.hs
hw03/hw02/src/: BootstrappedHeap.hs  Deque.hs  SkewBinomialHeap.hs
hw03/hw02/test/: BankersDequeTest.hs  BootstrappedHeapTest.hs  SkewBinomialHeapTest.hs  Test.hs
hw03/hw02/test/Test/: BankersDeque.hs  BootstrappedHeap.hs  SkewBinomialHeap.hs
hw03/tests_hw01/hw01/: hw03.cabal
hw03/tests_hw01/hw01/app/: Tree1.hs  Tree2.hs  Tree3.hs
hw03/tests_hw01/hw01/src/: BankersQueue.hs  PhysicistQueue.hs  PureQueue.hs  Queue.hs  RealTimeQueue.hs
hw03/tests_hw01/hw01/test/: PureQueueTest.hs  RealTimeQueueTest.hs
hw04/: LICENSE  hw04.cabal
hw04/app/: Main.hs
sparseMatrix/: CHANGELOG.md  README.md  package.yaml  sparseQuadTree.cabal
sparseMatrix/src/: Matrix.hs  QuadTree.hs
sparseMatrix/test/Test/Matrix/: Gen.hs  Prop.hs  UnitTest.hs
stlc/: CHANGELOG.md  LICENSE  README.md  package.yaml  stlc.cabal
stlc/app/: App.hs
stlc/src/: Error.hs  Parser.hs  Syntax.hs  TypeCheck.hs
stlc/test/Test/: Parser.hs  TypeCheck.hs
