cabal-version:      3.0
name:               hw01
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             tejchu
maintainer:         tstefanovs@jacobs-university.de
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hw01
    import:           warnings
    main-is:          Main.hs
    other-modules:    BankersQueue
    -- exposed-modules:
    -- other-extensions:
    hs-source-dirs:   src app test
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    build-depends:base >=4.7 && <5, exceptions, optparse-applicative, split, hspec, criterion
    default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules: Test.BankersQueue
        BankersQueue
        PhysicistQueue
        PureQueue
        Queue
        RealTimeQueue
        Test.PhysicistQueue
        Test.PureQueue
        Test.RealTimeQueue
        Test.Tree1
        Tree1
  hs-source-dirs:
      test src app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hedgehog
    , tasty
    , tasty-hedgehog
    , tasty-hspec
    , tasty-hunit
    , tasty-quickcheck
  default-language: Haskell2010